# SPBachelor

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: CImg.cmake  FindLibJPEG.cmake  FindLibPNG.cmake  FindX11.cmake
src/: CMakeLists.txt  classCluster.cpp  classCluster.h  classEdge.h  classHPAMaze.cpp  classHPAMaze.h  classMaze.cpp  classMaze.h  classTimer.h  main.cpp  structNode.h  structPixels.h
